# marchingSquares

./: README.md  requirements.txt  setup.cfg
src/masq/: __init__.py  const.py  contour.py  generator.py  marching_squares.py  ms.py  noise.py  point.py
tests/: binary_test.py  contour_test.py  generate.py  root_test.py
