[metadata]
name = masq
version = 0.0.1
author = MorvanZhou
author_email = morvanzhou@hotmail.com
description = Marching Squares implementation by Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MorvanZhou/marchingSquares
project_urls =
    Bug Tracker = https://github.com/MorvanZhou/marchingSquares/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    opensimplex>=0.4.3
    numpy>=1.22

[options.packages.find]
where = src

[options.extras_require]
build =
    tox==3.24.3
    build
    twine
    pylint
